# src/main/resources/openapi.json
@@ -1,7 +1,7 @@
 {
 	"openapi": "3.0.2",
 	"info": {
-		"title": "API Title",
+		"title": "Computer shop Api",
 		"version": "1.0"
 	},
 	"servers": [
@@ -10,27 +10,6 @@
 		}
 	],
 	"paths": {
-		"/kunden/listeVonAllen": {
-			"get": {
-				"summary": "Alle Kunden abrufen",
-				"operationId": "getKunden",
-				"responses": {
-					"200": {
-						"description": "Liste aller Kunden",
-						"content": {
-							"application/json": {
-								"schema": {
-									"type": "array",
-									"items": {
-										"$ref": "#/components/schemas/Kunde"
-									}
-								}
-							}
-						}
-					}
-				}
-			}
-		},
 		"/kunden/{id}": {
 			"get": {
 				"summary": "Kunde nach ID abrufen",
@@ -162,21 +141,19 @@
 						}
 					}
 				}
-			}
-		},
-		"/artikel/listeVonAllen": {
+			},
 			"get": {
-				"summary": "Alle Artikel abrufen",
-				"operationId": "getArtikel",
+				"summary": "Alle Kunden abrufen",
+				"operationId": "getKunden",
 				"responses": {
 					"200": {
-						"description": "Liste aller Artikel",
+						"description": "Liste aller Kunden",
 						"content": {
 							"application/json": {
 								"schema": {
 									"type": "array",
 									"items": {
-										"$ref": "#/components/schemas/Artikel"
+										"$ref": "#/components/schemas/Kunde"
 									}
 								}
 							}
@@ -311,6 +288,25 @@
 							"application/json": {
 								"schema": {
 									"$ref": "#/components/schemas/Artikel"
+								}
+							}
+						}
+					}
+				}
+			},
+			"get": {
+				"summary": "Alle Artikel abrufen",
+				"operationId": "getArtikel",
+				"responses": {
+					"200": {
+						"description": "Liste aller Artikel",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "array",
+									"items": {
+										"$ref": "#/components/schemas/Artikel"
+									}
 								}
 							}
 						}
